--- a/wp-content/themes/ishichatheme/templates/front-page.html
+++ b/wp-content/themes/ishichatheme/templates/front-page.html
@@ -6,22 +6,33 @@
 	<div class="wp-block-query">
 		<!-- wp:post-template -->
 		<!-- wp:group -->
-		<div class="wp-block-group">
-			<!-- wp:post-title {"isLink":true} /-->
-			<!-- wp:post-featured-image {"isLink":true} /-->
-			<!-- wp:post-content /-->
-			<!-- wp:group {"layout":{"type":"flex"}, "style":{"typography":{"fontSize":"14px"}}} -->
-			<div class="wp-block-group" style="font-size:14px">
-				<!-- wp:post-author {"showAvatar":false,"showBio":false} /-->
-				<!-- wp:post-date {"isLink":true} /-->
-				<!-- wp:post-terms {"term":"category"} /-->
-				<!-- wp:post-terms {"term": "post_tag"} /-->
-			</div>
-			<!-- /wp:group -->
-			<!-- wp:spacer {"height":40} -->
-			<div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
-			<!-- /wp:spacer -->
-		</div>
+<!-- wp:template-part {"slug":"header","theme":"ishichatheme","tagName":"header"} /-->
+
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"top":"0px","bottom":"0px"}}},"layout":{"type":"constrained"}} -->
+<main class="wp-block-group" style="margin-top:0;margin-bottom:0;padding-top:0px;padding-bottom:0px"><!-- wp:cover {"url":"http://ishichac.local/wp-content/uploads/2026/02/pexels-gabby-k-6310980-1024x683.jpg","id":48,"dimRatio":20,"overlayColor":"black","isUserOverlayColor":true,"focalPoint":{"x":0.51,"y":0.48},"sizeSlug":"large","layout":{"type":"constrained"}} -->
+<div class="wp-block-cover"><img class="wp-block-cover__image-background wp-image-48 size-large" alt="" src="http://ishichac.local/wp-content/uploads/2026/02/pexels-gabby-k-6310980-1024x683.jpg" style="object-position:51% 48%" data-object-fit="cover" data-object-position="51% 48%"/><span aria-hidden="true" class="wp-block-cover__background has-black-background-color has-background-dim-20 has-background-dim"></span><div class="wp-block-cover__inner-container"><!-- wp:buttons {"layout":{"type":"flex","justifyContent":"center"}} -->
+<div class="wp-block-buttons"><!-- wp:button {"width":25} -->
+<div class="wp-block-button has-custom-width wp-block-button__width-25"><a class="wp-block-button__link wp-element-button">SHOP NOW</a></div>
+<!-- /wp:button --></div>
+<!-- /wp:buttons --></div></div>
+<!-- /wp:cover -->
+
+<!-- wp:query {"queryId":0,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true,"taxQuery":null,"parents":[]},"layout":{"contentSize":null,"type":"constrained"}} -->
+<div class="wp-block-query"><!-- wp:post-template {"layout":{"type":"default"}} -->
+<!-- wp:group -->
+<div class="wp-block-group"><!-- wp:spacer {"height":"0px"} -->
+<div style="height:0px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer --></div>
+<!-- /wp:group -->
+<!-- /wp:post-template -->
+
+<!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
+<div class="wp-block-group"></div>
+<!-- /wp:group --></div>
+<!-- /wp:query --></main>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","theme":"ishichatheme","tagName":"footer"} /-->
 		<!-- /wp:group -->
 		<!-- /wp:post-template -->
 		<!-- wp:group {"layout":{"inherit":true}} -->
