finished home page

--- a/wp-content/themes/ishichatheme/templates/front-page.html
+++ b/wp-content/themes/ishichatheme/templates/front-page.html
@@ -1,16 +1,8 @@
-<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
-
-<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group">
-	<!-- wp:query {"layout":{"inherit":true}} -->
-	<div class="wp-block-query">
-		<!-- wp:post-template -->
-		<!-- wp:group -->
 <!-- wp:template-part {"slug":"header","theme":"ishichatheme","tagName":"header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"top":"0px","bottom":"0px"}}},"layout":{"type":"constrained"}} -->
-<main class="wp-block-group" style="margin-top:0;margin-bottom:0;padding-top:0px;padding-bottom:0px"><!-- wp:cover {"url":"http://ishichac.local/wp-content/uploads/2026/02/pexels-gabby-k-6310980-1024x683.jpg","id":48,"dimRatio":20,"overlayColor":"black","isUserOverlayColor":true,"focalPoint":{"x":0.51,"y":0.48},"sizeSlug":"large","layout":{"type":"constrained"}} -->
-<div class="wp-block-cover"><img class="wp-block-cover__image-background wp-image-48 size-large" alt="" src="http://ishichac.local/wp-content/uploads/2026/02/pexels-gabby-k-6310980-1024x683.jpg" style="object-position:51% 48%" data-object-fit="cover" data-object-position="51% 48%"/><span aria-hidden="true" class="wp-block-cover__background has-black-background-color has-background-dim-20 has-background-dim"></span><div class="wp-block-cover__inner-container"><!-- wp:buttons {"layout":{"type":"flex","justifyContent":"center"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"top":"0px","bottom":"0px"}}},"layout":{"type":"default"}} -->
+<main class="wp-block-group" style="margin-top:0;margin-bottom:0;padding-top:0px;padding-bottom:0px"><!-- wp:cover {"url":"http://ishichac.local/wp-content/uploads/2026/02/pexels-gabby-k-6310980-1024x683.jpg","id":48,"dimRatio":50,"overlayColor":"black","isUserOverlayColor":true,"focalPoint":{"x":0.51,"y":0.48},"sizeSlug":"large","layout":{"type":"default"}} -->
+<div class="wp-block-cover"><img class="wp-block-cover__image-background wp-image-48 size-large" alt="" src="http://ishichac.local/wp-content/uploads/2026/02/pexels-gabby-k-6310980-1024x683.jpg" style="object-position:51% 48%" data-object-fit="cover" data-object-position="51% 48%"/><span aria-hidden="true" class="wp-block-cover__background has-black-background-color has-background-dim"></span><div class="wp-block-cover__inner-container"><!-- wp:buttons {"layout":{"type":"flex","justifyContent":"center"}} -->
 <div class="wp-block-buttons"><!-- wp:button {"width":25} -->
 <div class="wp-block-button has-custom-width wp-block-button__width-25"><a class="wp-block-button__link wp-element-button">SHOP NOW</a></div>
 <!-- /wp:button --></div>
@@ -32,23 +24,118 @@
 <!-- /wp:query --></main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","theme":"ishichatheme","tagName":"footer"} /-->
-		<!-- /wp:group -->
-		<!-- /wp:post-template -->
-		<!-- wp:group {"layout":{"inherit":true}} -->
-			<div class="wp-block-group">
-			<!-- wp:query-pagination -->
-				<!-- wp:query-pagination-previous /-->
+<!-- wp:columns {"style":{"spacing":{"padding":{"right":"var:preset|spacing|50","left":"var:preset|spacing|50"}}}} -->
+<div class="wp-block-columns" style="padding-right:var(--wp--preset--spacing--50);padding-left:var(--wp--preset--spacing--50)"><!-- wp:column -->
+<div class="wp-block-column"><!-- wp:group {"style":{"border":{"width":"4px"},"shadow":"var:preset|shadow|crisp"},"borderColor":"black","layout":{"type":"default"}} -->
+<div class="wp-block-group has-border-color has-black-border-color" style="border-width:4px;box-shadow:var(--wp--preset--shadow--crisp)"><!-- wp:columns {"style":{"spacing":{"padding":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50","left":"var:preset|spacing|50","right":"var:preset|spacing|50"}}}} -->
+<div class="wp-block-columns" style="padding-top:var(--wp--preset--spacing--50);padding-right:var(--wp--preset--spacing--50);padding-bottom:var(--wp--preset--spacing--50);padding-left:var(--wp--preset--spacing--50)"><!-- wp:column -->
+<div class="wp-block-column"><!-- wp:heading {"level":3,"style":{"elements":{"link":{"color":{"text":"var:preset|color|cyan"}}}},"textColor":"cyan"} -->
+<h3 class="wp-block-heading has-cyan-color has-text-color has-link-color">NEW ARRIVALS</h3>
+<!-- /wp:heading -->
 
-				<!-- wp:query-pagination-numbers /-->
+<!-- wp:paragraph -->
+<p>Explore our signature collection of essentials. This collection features silhouettes. By merging traditional with a digital-native aesthetic, we create apparel that exists at the intersection of physical comfort and technical precision.</p>
+<!-- /wp:paragraph -->
 
-				<!-- wp:query-pagination-next /-->
-			<!-- /wp:query-pagination -->
-			</div>
-			<!-- /wp:group -->
-		</div>
-	<!-- /wp:query -->
-</main>
+<!-- wp:paragraph -->
+<p>Every piece is engineered in our studio to serve as a versatile staple for the modern creative. By merging traditional craftsmanship with a digital-native aesthetic.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p>We create apparel that exists at the intersection of physical comfort and technical precision</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:buttons -->
+<div class="wp-block-buttons"><!-- wp:button {"backgroundColor":"volt","style":{"spacing":{"padding":{"left":"var:preset|spacing|50","right":"var:preset|spacing|50","top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} -->
+<div class="wp-block-button"><a class="wp-block-button__link has-volt-background-color has-background wp-element-button" style="padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--50);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--50)">BROWSE</a></div>
+<!-- /wp:button --></div>
+<!-- /wp:buttons --></div>
+<!-- /wp:column -->
+
+<!-- wp:column -->
+<div class="wp-block-column"><!-- wp:image {"id":58,"scale":"cover","sizeSlug":"large","linkDestination":"none"} -->
+<figure class="wp-block-image size-large"><img src="http://ishichac.local/wp-content/uploads/2026/02/pexels-withoguz-24602318-576x1024.jpg" alt="" class="wp-image-58" style="object-fit:cover"/></figure>
+<!-- /wp:image --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns --></div>
+<!-- /wp:group --></div>
+<!-- /wp:column -->
+
+<!-- wp:column {"verticalAlignment":"top","style":{"spacing":{"blockGap":"40px"}}} -->
+<div class="wp-block-column is-vertically-aligned-top"><!-- wp:group {"style":{"shadow":"var:preset|shadow|crisp","spacing":{"padding":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50","left":"var:preset|spacing|40","right":"var:preset|spacing|40"},"margin":{"top":"var:preset|spacing|40","bottom":"var:preset|spacing|60"}}},"backgroundColor":"white","borderColor":"black","layout":{"type":"default"}} -->
+<div class="wp-block-group has-border-color has-black-border-color has-white-background-color has-background" style="margin-top:var(--wp--preset--spacing--40);margin-bottom:var(--wp--preset--spacing--60);padding-top:var(--wp--preset--spacing--50);padding-right:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--50);padding-left:var(--wp--preset--spacing--40);box-shadow:var(--wp--preset--shadow--crisp)"><!-- wp:columns -->
+<div class="wp-block-columns"><!-- wp:column {"width":"66.66%"} -->
+<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:heading {"level":3} -->
+<h3 class="wp-block-heading">LIMITED</h3>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph -->
+<p>Small-batch releases and studio exclusives. Available until sold out.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:buttons {"style":{"spacing":{"padding":{"top":"0","bottom":"0"},"margin":{"top":"0","bottom":"0"}}}} -->
+<div class="wp-block-buttons" style="margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0"><!-- wp:button {"backgroundColor":"cyan","className":"is-style-outline","style":{"spacing":{"padding":{"left":"var:preset|spacing|50","right":"var:preset|spacing|50","top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} -->
+<div class="wp-block-button is-style-outline"><a class="wp-block-button__link has-cyan-background-color has-background wp-element-button" style="padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--50);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--50)">view</a></div>
+<!-- /wp:button --></div>
+<!-- /wp:buttons --></div>
+<!-- /wp:column -->
+
+<!-- wp:column {"width":"33.33%","layout":{"type":"default"}} -->
+<div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:image {"id":65,"sizeSlug":"large","linkDestination":"none"} -->
+<figure class="wp-block-image size-large"><img src="http://ishichac.local/wp-content/uploads/2026/02/pexels-pablolglez-34247480-1024x1024.jpg" alt="" class="wp-image-65"/></figure>
+<!-- /wp:image --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns --></div>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+<!-- wp:group {"style":{"shadow":"var:preset|shadow|crisp","spacing":{"padding":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50","left":"var:preset|spacing|40","right":"var:preset|spacing|40"},"margin":{"top":"var:preset|spacing|40","bottom":"var:preset|spacing|40"}}},"backgroundColor":"white","borderColor":"black","layout":{"type":"default"}} -->
+<div class="wp-block-group has-border-color has-black-border-color has-white-background-color has-background" style="margin-top:var(--wp--preset--spacing--40);margin-bottom:var(--wp--preset--spacing--40);padding-top:var(--wp--preset--spacing--50);padding-right:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--50);padding-left:var(--wp--preset--spacing--40);box-shadow:var(--wp--preset--shadow--crisp)"><!-- wp:columns -->
+<div class="wp-block-columns"><!-- wp:column {"width":"66.66%"} -->
+<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:heading {"level":3} -->
+<h3 class="wp-block-heading">MISSION</h3>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph -->
+<p>Bridging between digital and physical design.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:buttons -->
+<div class="wp-block-buttons"><!-- wp:button {"backgroundColor":"cyan","className":"is-style-outline","style":{"spacing":{"padding":{"left":"var:preset|spacing|50","right":"var:preset|spacing|50","top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} -->
+<div class="wp-block-button is-style-outline"><a class="wp-block-button__link has-cyan-background-color has-background wp-element-button" style="padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--50);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--50)">join</a></div>
+<!-- /wp:button --></div>
+<!-- /wp:buttons --></div>
+<!-- /wp:column -->
+
+<!-- wp:column {"width":"33.33%"} -->
+<div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:image {"id":66,"sizeSlug":"large","linkDestination":"none"} -->
+<figure class="wp-block-image size-large"><img src="http://ishichac.local/wp-content/uploads/2026/02/pexels-marsel_shots-452624787-15564085-1024x1024.jpg" alt="" class="wp-image-66"/></figure>
+<!-- /wp:image --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns --></div>
+<!-- /wp:group --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns -->
+
+<!-- wp:query {"queryId":10,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false,"taxQuery":null,"parents":[],"format":[]},"layout":{"type":"default"}} -->
+<div class="wp-block-query"><!-- wp:post-template {"layout":{"type":"grid","columnCount":3}} -->
+<!-- wp:post-featured-image {"style":{"shadow":"var:preset|shadow|outlined"},"borderColor":"black"} /-->
+
+<!-- wp:post-title /-->
+<!-- /wp:post-template -->
+
+<!-- wp:query-pagination -->
+<!-- wp:query-pagination-previous /-->
+
+<!-- wp:query-pagination-numbers /-->
+
+<!-- wp:query-pagination-next /-->
+<!-- /wp:query-pagination -->
+
+<!-- wp:query-no-results -->
+<!-- wp:paragraph {"placeholder":"Add text or blocks that will display when a query returns no results."} -->
+<p></p>
+<!-- /wp:paragraph -->
+<!-- /wp:query-no-results --></div>
+<!-- /wp:query -->
+
+<!-- wp:template-part {"slug":"footer","theme":"ishichatheme","tagName":"footer"} /-->
